[tool.poetry]
name = "requests-test"
version = "0.1.0"
description = ""
authors = ["Mikita Yeudakimau <nikevdokimovv@gmail.com>"]
readme = "README.md"
#packages = [{include = "requests_test"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
urlextract = "^1.7.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
aiohttp = "^3.8.3"


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
